--- a/bio.html
+++ b/bio.html
@@ -12,55 +12,49 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-
-    <style>
-        header {
-            font-family: "Permanent Marker", sans-serif;
-        }
-    </style>
-
-<style>
-    h4 {
-        font-family: "Permanent Marker", sans-serif;
-    }
-</style>
-
 </head>
 <header>
     Producer E87
 </header>
 <div>
     <nav class="nav__btn" id="nav__btn">
-        <h4>
-        <a href="../index.html"> Home</a>
-        <a href="../bio.html"> Bio</a>
-        <a href="../bio.html"> Obras</a>
-        <a href="../contacto.html"> Contacto</a>
-    </h4>
+            <a href="index.html"> Home</a>
+            <a href="bio.html"> Bio</a>
+            <a href="obras.html"> Music</a>
+            <a href="contacto.html"> Contacto</a>
     </nav>
 </div>
 
 <body>
     <main>
-        <div>
-            <!--img Philip-->
-            <!--FOTO DE PHILIP -->
+        <div id="disco_1">
+            <img src="img/Producer_E87_portrait.jpg" width="400" height="400" id="newAlbum" name="newAlbum">
         </div>
         <div>
             <h3>
-                Todo comenzó allá por el 98, el primer soft crackeado por los monstruos de H20, long live kings o' warez!!, still working those bytes!!.
+                Todo comenzó allá por el 98, el primer soft crackeado por los monstruos de H20, long live kings o'
+                warez!!, still working those bytes!!.
                 <br>
                 Visualizar el audio en pantalla por vez primera y reconocerse en un sequencer.
                 <br>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi nobis aut voluptate ab quia animi rerum debitis reiciendis laudantium quos veniam alias temporibus ut accusantium itaque, consectetur neque laboriosam. Aliquam accusamus quis illo ad consequuntur suscipit obcaecati unde aliquid impedit?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolores ut eum distinctio aspernatur. Autem distinctio harum cum doloremque deserunt! Illum natus voluptate mollitia maiores voluptatem adipisci neque fugit quia.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore obcaecati tempora modi corporis, totam laudantium animi? Porro sit qui modi temporibus et, iste quis, voluptatem, consequatur asperiores necessitatibus quia debitis reiciendis pariatur! Iste ex voluptas, ratione dolorum voluptatibus odit commodi quam deserunt a at nemo quis labore, accusantium ipsum fugiat, dicta iure provident placeat! Facere, ipsa. Veniam fuga porro delectus qui quia fugit ad? Ratione, provident praesentium saepe repellendus cumque voluptas facilis soluta, vel fugiat corrupti tempore quos animi dolorem.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi nobis aut voluptate ab quia animi
+                rerum debitis reiciendis laudantium quos veniam alias temporibus ut accusantium itaque, consectetur
+                neque laboriosam. Aliquam accusamus quis illo ad consequuntur suscipit obcaecati unde aliquid impedit?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolores ut eum distinctio
+                aspernatur. Autem distinctio harum cum doloremque deserunt! Illum natus voluptate mollitia maiores
+                voluptatem adipisci neque fugit quia.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore obcaecati tempora modi corporis, totam
+                laudantium animi? Porro sit qui modi temporibus et, iste quis, voluptatem, consequatur asperiores
+                necessitatibus quia debitis reiciendis pariatur! Iste ex voluptas, ratione dolorum voluptatibus odit
+                commodi quam deserunt a at nemo quis labore, accusantium ipsum fugiat, dicta iure provident placeat!
+                Facere, ipsa. Veniam fuga porro delectus qui quia fugit ad? Ratione, provident praesentium saepe
+                repellendus cumque voluptas facilis soluta, vel fugiat corrupti tempore quos animi dolorem.
                 <br>
             </h3>
         </div>
-    </main>
     <footer>
         <fieldset>
+            <h4>yo soy el footer con todos los iconos de redes sociales</h4>
             <img src="img/instagram.png" alt"" width="40" height="40">
             <!--
 WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
@@ -69,6 +63,7 @@ DESCARGAR LA IMAGEN PNG
 -->
         </fieldset>
     </footer>
+    </main>
 </body>
 
 </html>
