--- a/bio.html
+++ b/bio.html
@@ -13,6 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
+<!--
 <header>
     Producer E87
 </header>
@@ -24,10 +25,23 @@
             <a href="contacto.html"> Contacto</a>
     </nav>
 </div>
-
+-->
 <body>
-    <main>
-        <div id="disco_1">
+
+    <div class="contenedor">
+        <header class="header">
+            Producer E87
+        </header>
+
+        <nav class="nav" id="nav_Menu">
+            <a href="index.html"> Home</a>
+            <a href="bio.html"> Bio</a>
+            <a href="obras.html"> Music</a>
+            <a href="contacto.html"> Contacto</a>
+        </nav>
+
+        <main class="main">
+            <div id="producer_E87_portrait">
             <img src="img/Producer_E87_portrait.jpg" width="400" height="400" id="newAlbum" name="newAlbum">
         </div>
         <div>
@@ -52,18 +66,20 @@
                 <br>
             </h3>
         </div>
-    <footer>
-        <fieldset>
-            <h4>yo soy el footer con todos los iconos de redes sociales</h4>
-            <img src="img/instagram.png" alt"" width="40" height="40">
-            <!--
-WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
-DESCARGAR LA IMAGEN PNG
-----COMO METER ICONO DE RED SOCIAL
--->
-        </fieldset>
-    </footer>
-    </main>
+            <footer class="footer">
+                <fieldset>
+                    <img src="img/instagram.png" alt"" width="40" height="40">
+                    yo soy el footer con todos los iconos de redes sociales    
+                    <br><br><br>
+                    <!--
+            WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
+            DESCARGAR LA IMAGEN PNG
+            ----COMO METER ICONO DE RED SOCIAL
+            -->
+                </fieldset>
+            </footer>
+        </main>
+    </div>
 </body>
 
 </html>
