--- a/bio.html
+++ b/bio.html
@@ -13,72 +13,45 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
 </head>
-<!--
-<header>
-    Producer E87
-</header>
-<div>
-    <nav class="nav__btn" id="nav__btn">
-            <a href="index.html"> Home</a>
-            <a href="bio.html"> Bio</a>
-            <a href="obras.html"> Music</a>
-            <a href="contacto.html"> Contacto</a>
-    </nav>
-</div>
--->
+
 <body>
 
     <div class="contenedor">
-        <header class="header">
-            Producer E87
-        </header>
-
+        <header class="header"> Producer E87 </header>
         <nav class="nav" id="nav_Menu">
             <a href="index.html"> Home</a>
             <a href="bio.html"> Bio</a>
-            <a href="obras.html"> Music</a>
+            <a href="music.html"> Music</a>
             <a href="contacto.html"> Contacto</a>
         </nav>
-
         <main class="main">
             <div id="producer_E87_portrait">
-            <img src="img/Producer_E87_portrait.jpg" width="400" height="400" id="newAlbum" name="newAlbum">
-        </div>
-        <div>
-            <h3>
-                Todo comenzó allá por el 98, el primer soft crackeado por los monstruos de H20, long live kings o'
-                warez!!, still working those bytes!!.
-                <br>
-                Visualizar el audio en pantalla por vez primera y reconocerse en un sequencer.
-                <br>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi nobis aut voluptate ab quia animi
-                rerum debitis reiciendis laudantium quos veniam alias temporibus ut accusantium itaque, consectetur
-                neque laboriosam. Aliquam accusamus quis illo ad consequuntur suscipit obcaecati unde aliquid impedit?
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos dolores ut eum distinctio
-                aspernatur. Autem distinctio harum cum doloremque deserunt! Illum natus voluptate mollitia maiores
-                voluptatem adipisci neque fugit quia.
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore obcaecati tempora modi corporis, totam
-                laudantium animi? Porro sit qui modi temporibus et, iste quis, voluptatem, consequatur asperiores
-                necessitatibus quia debitis reiciendis pariatur! Iste ex voluptas, ratione dolorum voluptatibus odit
-                commodi quam deserunt a at nemo quis labore, accusantium ipsum fugiat, dicta iure provident placeat!
-                Facere, ipsa. Veniam fuga porro delectus qui quia fugit ad? Ratione, provident praesentium saepe
-                repellendus cumque voluptas facilis soluta, vel fugiat corrupti tempore quos animi dolorem.
-                <br>
-            </h3>
-        </div>
-            <footer class="footer">
-                <fieldset>
-                    <img src="img/instagram.png" alt"" width="40" height="40">
-                    yo soy el footer con todos los iconos de redes sociales    
-                    <br><br><br>
-                    <!--
+                <img src="img/Producer_E87_portrait.jpg" width="400" height="400" id="newAlbum" name="newAlbum">
+            </div>
+            <div>
+                <h6>
+                    El primer soft crackeado por los monstruos de H20, long live kings o'
+                    warez!!, still working those bytes!!. 
+                    Saras y mas saras para ocupar espacio que me permita testear como va la cosa
+                </h6>
+            </div>
+        </main>
+        <div class="bloque1">Bloque1</div>
+        <div class="sidebar">Sidebar</div>
+
+        <footer class="footer">
+
+            <img src="img/instagram.png" alt"" width="40" height="40">
+            yo soy el footer con todos los iconos de redes sociales
+            <br><br><br>
+            <!--
             WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
             DESCARGAR LA IMAGEN PNG
             ----COMO METER ICONO DE RED SOCIAL
             -->
-                </fieldset>
-            </footer>
-        </main>
+
+        </footer>
+
     </div>
 </body>
 
