--- a/bio.html
+++ b/bio.html
@@ -8,6 +8,7 @@
     <!-- <link rel="icon" href="img/html.ico" type    -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="STYLESHEET" href="css/estilos.css">
+    <link rel="icon" href="img/html.ico">
     <title>Biografía</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
