--- a/bio.html
+++ b/bio.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="" X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="icon" href="img/html.ico" type    -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-    <link rel="STYLESHEET" href="css/estilos.css">
+    <link rel="STYLESHEET" href="css/bio.css">
     <link rel="icon" href="img/html.ico">
     <title>Biografía</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -16,44 +15,56 @@
 </head>
 
 <body>
-
     <div class="contenedor">
         <header class="header"> Producer E87 </header>
         <nav class="nav" id="nav_Menu">
-            <a href="index.html"> Home</a>
+            <a href="index.html"> News</a>
             <a href="bio.html"> Bio</a>
             <a href="music.html"> Music</a>
             <a href="contacto.html"> Contacto</a>
         </nav>
         <main class="main">
             <div id="producer_E87_portrait">
-                <img src="img/Producer_E87_portrait.jpg" width="400" height="400" id="newAlbum" name="newAlbum">
+                <img src="img/Producer_E87_portrait.jpg" id="producere87_selfie" name="newAlbum">
             </div>
-            <div>
-                <h6>
-                    El primer soft crackeado por los monstruos de H20, long live kings o'
-                    warez!!, still working those bytes!!. 
-                    Saras y mas saras para ocupar espacio que me permita testear como va la cosa
-                </h6>
-            </div>
+<div id="contenedor_texto_bio">
+    <h2>
+It all started after getting a CD full of audiowarez in a park nearby home, H2O long live kings o' warez!!, still working those bytes!!.
+    </h2>
+</div>
         </main>
-        <div class="bloque1">Bloque1</div>
+<!--        <div class="bloque1">Bloque1</div>
         <div class="sidebar">Sidebar</div>
+-->
+<footer class="footer">
+    <div id="icon">
+      <div class="icono" id="face_icon">
+        <a href="https://es-la.facebook.com/" target="_blank" title="Ir a Facebook"><img src="img/facebook.svg"
+            alt="facebook"> </a>
+      </div>
+      <div class="icono" id="insta_icon">
+        <a href="https://instagram.com" target="_blank" title="Ir a Instagram"><img src="img/instagram.svg"
+            alt="instagram"></a>
 
-        <footer class="footer">
-
-            <img src="img/instagram.png" alt"" width="40" height="40">
-            yo soy el footer con todos los iconos de redes sociales
-            <br><br><br>
-            <!--
-            WWW.flaticon.es  SACAR DE ESTA WEB LOS ICONOS PARA ESTA SECCION
-            DESCARGAR LA IMAGEN PNG
-            ----COMO METER ICONO DE RED SOCIAL
-            -->
-
-        </footer>
+      </div>
+      <div class="icono" id="twitter_icon">
+        <a href="https://twitter.com/home?lang=es" target="_blank" title="Ir a Twitter"><img src="img/twitter.svg"
+            alt="twitter"></a>
+      </div>
+      <div class="icono" id="youtube_icon">
+        <a href="https://www.youtube.com/" target="_blank" title="Ir a Youtube"><img src="img/youtube.svg"
+            alt="youtube"></a>
+      </div>
+    </div>
+    <div>
+        <h2>
+      © Producer E87
+    </h2>
+    </div>
+  </footer>
 
     </div>
+    <script src="js/bio.js"></script>
 </body>
 
 </html>
