--- a/Seq.html
+++ b/Seq.html
@@ -8,12 +8,12 @@
 </head>
 
 <body>
-
+<h1>ATENCION!!!<br> MUCHO RUIDO A MUY ALTO VOLUMEN!!!</h1>
+  <h1>Sequencer usando un for</h1>
   <button onclick="startSequencer()">Start Sequencer</button>
   <button onclick="stopSequencer()">Stop Sequencer</button>
-
   <script src="js/seq.js">  </script>
-
+  <br><br>
 </body>
 
 </html>
